fixed overlap from contact icon and contact text

--- a/src/components/contact-view/contact-view.scss
+++ b/src/components/contact-view/contact-view.scss
@@ -29,7 +29,7 @@
     text-align: right;
     font-size: $extra-small-font;
     padding-right: 10px;
-    padding-left: 10px;
+    padding-left: calc(clamp($skillbar-icon-size, $skillbar-icon-size * 1.25,  min(7vh, 7vw)) * .75);
 }
 
 .cv-box-container {
